content changes for CBL after Sharon checked them

--- a/app/views/forms/housing/CBL5yearsadd-joint.html
+++ b/app/views/forms/housing/CBL5yearsadd-joint.html
@@ -8,10 +8,10 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag red">CHANGED</span>
+            Apply online for council housing 
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
-        <p class="govuk-body-l">Enter the addresses your joint applicant lived at for the last 5 years. Start with the one they are living in at the moment.</p>
+        <p class="govuk-body-l">Enter the addresses your joint applicant lived at for the past 5 years. Start with the one they are living in at the moment.</p>
         <h2 class="govuk-heading-m">
             Address 1:
         </h2>
@@ -48,7 +48,7 @@
           name: "type1-joint",
           fieldset: {
             legend: {
-              text: "Were they a:",
+              text: "Which were they?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
@@ -153,9 +153,9 @@
               checked: checked("leave1-joint", "Asked or told to leave")
             },
             {
-              value: "Relation breakdown",
-              text: "Relation breakdown",
-              checked: checked("leave1-joint", "Relation breakdown")
+              value: "Relationship breakdown",
+              text: "Relationship breakdown",
+              checked: checked("leave1-joint", "Relationship breakdown")
             },
             {
               value: "End of lease",
