--- a/app/views/forms/housing/CBL5yearsadd-question.html
+++ b/app/views/forms/housing/CBL5yearsadd-question.html
@@ -8,7 +8,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag red">NEW</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <p class="govuk-body-l">We need to know about all the addresses you lived at for the last 5 years.</p>
@@ -62,9 +62,9 @@
     </ul>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes: <span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>Validation: Confirm need to add past address</li>
+    <li>Validation: <span class="govuk-error-message">Confirm need to add past address</span></li>
     <li>if yes, goes to ask first previous address</li>
     <li>if no, then if there is no joint applicant, goes to the legal questions, if there is one then ask about same addresses for the joint or not</li>
     </ul>
