--- a/app/views/forms/housing/CBLNI.html
+++ b/app/views/forms/housing/CBLNI.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          Apply online for council housing<span class="UR-tag ok">ok</span>
+          Apply online for council housing<span class="UR-tag red">still under discussion</span>
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <form class="form" method="post">
@@ -77,9 +77,9 @@
 
   <div class="IT-notes-box">
       <h3 class="govuk-heading-s">IT notes:</h3>
-      <p>pattern agreed by Housing, can be coded</p>
-      <p>validation: Confirm have National Insurance number</p>
-      <p>validation if yes: Enter National Insurance number</p>
+      <p>pattern agreed by Housing, can be coded but NI use still under discussion with Legal</p>
+      <p>validation: <span class="govuk-error-message">Confirm have National Insurance number</span></p>
+      <p>validation if yes: <span class="govuk-error-message">Enter National Insurance number</span></p>
     </div>
 
 {% endblock %}
