--- a/app/views/forms/housing/CBLaddress2-loop-joint.html
+++ b/app/views/forms/housing/CBLaddress2-loop-joint.html
@@ -78,7 +78,7 @@
           name: "type2-joint",
           fieldset: {
             legend: {
-              text: "Were they a:",
+              text: "Which were they?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
@@ -183,9 +183,9 @@
             checked: checked("leave2-joint", "Asked or told to leave")
           },
           {
-            value: "Relation breakdown",
-            text: "Relation breakdown",
-            checked: checked("leave2-joint", "Relation breakdown")
+            value: "Relationship breakdown",
+            text: "Relationship breakdown",
+            checked: checked("leave2-joint", "Relationship breakdown")
           },
           {
             value: "End of lease",
