--- a/app/views/forms/housing/CBLaddress2-loop.html
+++ b/app/views/forms/housing/CBLaddress2-loop.html
@@ -78,7 +78,7 @@
           name: "type2",
           fieldset: {
             legend: {
-              text: "Were you a:",
+              text: "Which were you?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
@@ -184,9 +184,9 @@
             checked: checked("leave2", "Asked or told to leave")
           },
           {
-            value: "Relation breakdown",
-            text: "Relation breakdown",
-            checked: checked("leave2", "Relation breakdown")
+            value: "Relationship breakdown",
+            text: "Relationship breakdown",
+            checked: checked("leave2", "Relationship breakdown")
           },
           {
             value: "End of lease",
