--- a/app/views/forms/housing/CBLareas.html
+++ b/app/views/forms/housing/CBLareas.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing<span class="UR-tag ok">WILL HAVE EXTRA GUIDANCE</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <div class="govuk-form-group">
@@ -20,8 +20,7 @@
                 </h2>
                 </legend>
                 <span id="area-hint" class="govuk-hint govuk-!-margin-bottom-8">
-                    Your choices won't prevent you from bidding for homes in areas you have not selected.<br><br>
-                    Select all that apply.
+                    Your choices don’t stop you from bidding for homes in other areas. 
                 </span>
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                     <h2 class="govuk-fieldset__heading">
@@ -196,9 +195,9 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag red">not needed to provide the service - might be removed or changed</span></h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>can be coded - Giffnock has been added. It was missing from the form and also 3 checkboxes for Neilston</li>
+    <li> Giffnock has been added. It was missing from the form and also 3 checkboxes for Neilston</li>
     <li>Select at least one</li>
     <li>Guidance added at the top</li>
     </ul>
