--- a/app/views/forms/housing/CBLchild1.html
+++ b/app/views/forms/housing/CBLchild1.html
@@ -76,11 +76,11 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>Edit child 1 details takes them back to the previous page</li>
       <li>Remove child 1 takes them back to the screen where they select if they have children living with them</li>
-      <li>Validation - Confirm need to add another child</li>
+      <li>Validation - <span class="govuk-error-message">Confirm need to add another child</span></li>
     </ul>
 </div>
 
