--- a/app/views/forms/housing/CBLcontact.html
+++ b/app/views/forms/housing/CBLcontact.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing<span class="UR-tag red">CHANGED</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <form class="form" method="post">
@@ -146,11 +146,11 @@
     <p>We want the person to be able to add a different address if for whatever reason they don't want to use their home address</p>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>if no email was entered previously, could we remove the radio button on this page?</li>
     <li>new field to ask for another address if option selected - two buttons have wording changed</li>
-    <li>Validation: Confirm preferred contact (if none selected) - Enter other address - Enter contact details (for attorney textbox)</li>
+    <li>Validation: <span class="govuk-error-message">Confirm preferred contact</span> (if none selected) - <span class="govuk-error-message">Enter other address - Enter contact details</span> (for attorney textbox)</li>
     </ul>
 </div>
 
