--- a/app/views/forms/housing/CBLdeclaration1-details.html
+++ b/app/views/forms/housing/CBLdeclaration1-details.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing<span class="UR-tag amber">NEW</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         {% from "radios/macro.njk" import govukRadios %}
@@ -112,9 +112,10 @@
 </div>
 
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
  <li>New, content need to be checked</li>
+ <li>validation: <span class="govuk-error-message">Confirm if employee or councillor or related to / Enter job title / Enter first name / Enter last name / Enter relationship to you</span></li>
     </ul>
 </div>
 
