--- a/app/views/forms/housing/CBLdeclaration2.html
+++ b/app/views/forms/housing/CBLdeclaration2.html
@@ -61,14 +61,14 @@
 <div class="content-notes-box">
     <h3 class="govuk-heading-s">Content notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li><strong>this content was not seen by Sharon - there is too much  - but tested ok for now</strong></li>
+        <li><strong>this content was not seen by Sharon yet</strong> - there is too much and the medical and social mentions might need to be taken out or changed?</li>
         <li>as this is now at the beginning, I've change "I have given" to "I will give" twice</li>
     </ul>
 </div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li><strong>Screen moved at the start to avoid loosing too much progress if they click on the link to view the GDPR</strong></li>
+        <li><strong>Screen moved at the start to avoid loosing too much progress if they click on the link to view the GDPR</strong> - But CONTENT WILL CHANGED</li>
     </ul>
 </div>
     
