--- a/app/views/forms/housing/CBLother-children.html
+++ b/app/views/forms/housing/CBLother-children.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing <span class="UR-tag ok">ok</span>
+        Apply online for council housing 
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <form class="form" method="post">
@@ -21,10 +21,13 @@
         name: "other-children",
         fieldset: {
           legend: {
-            text: "Do you have a child who spends part of their time living with you and part of their time living with another family member or carer?",
+            text: "Do you have a child who sometimes lives with you?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
+        },
+        hint: {
+          text: "For example, a child who lives the rest of the time with another parent or carer. "
         },
         items: [
           {
@@ -48,11 +51,11 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag amber">should be ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>Validation - error message : to be provided when content is drafted</li>
+      <li>Validation - <span class="govuk-error-message">Confirm if have child sometime</span></li>
       <li>if they say yes, then enter children one by one - with screen that ask if more to add yes / no </li>
-      <li>if they say no, they jump to legal questions</li>
+      <li>if they say no, they jump to current address screen</li>
     </ul>
 </div>
 {% endblock %}
