--- a/app/views/forms/housing/CBLout.html
+++ b/app/views/forms/housing/CBLout.html
@@ -13,7 +13,7 @@
           Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
-      <p>You need to contact our Housing Advice and Homelessness Team</p>
+      <p>You need to contact our Housing Advice Team</p>
       <ul class="govuk-list">
           <li>Phone: 0141 577 3001</li>
           <li>Email: <a href="mailto:housingallocationenquiries@eastrenfrewshire.gov.uk">housingallocationenquiries@eastrenfrewshire.gov.uk</a></li>
@@ -22,7 +22,7 @@
 </div>
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:</h3>
-  <p>Change the sentence to what is on this screen: Remove 'Please' and change to 'You need to'</p>
+  <p>Change the sentence to what is on this screen</p>
 </div>
 
 {% endblock %}
