--- a/app/views/forms/housing/CBLperson1.html
+++ b/app/views/forms/housing/CBLperson1.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing<span class="UR-tag ok">ok</span>
+        Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <h2 class="govuk-heading-m">
@@ -80,7 +80,7 @@
     <ul class="govuk-list govuk-list--bullet">
       <li>Edit person 1 details takes them back to the previous page</li>
       <li>Remove person 1 takes them back to the screen where they select Living alone or not</li>
-      <li>Validation - Confirm need to add another person</li>
+      <li>Validation - <span class="govuk-error-message">Confirm if need to add another person</span></li>
       <li>table used for the summary can be different format, like summary page - must be responsive and display well on mobile (check summary from P1 as an example?)</li>
     </ul>
 </div>
