--- a/app/views/forms/housing/CBLreasons.html
+++ b/app/views/forms/housing/CBLreasons.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing<span class="UR-tag ok">ok</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <div class="govuk-form-group">
@@ -31,7 +31,7 @@
                     <div class="govuk-checkboxes__item">
                         <input class="govuk-checkboxes__input" id="reason-1" name="reason" type="checkbox" value="reason1">
                         <label class="govuk-label govuk-checkboxes__label" for="reason-1">
-                        Homeless or threatened with homelessness
+                            Homelessness or at risk of homelessness 
                         </label>
                     </div>
                     <div class="govuk-checkboxes__item">
@@ -187,10 +187,12 @@
 </div>
 
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>agreed by Housing, - need at least one checked: Select at least one reason (error message to be agreed by Sharon) - or need to have a text in the "Other" textbox</li>
+    <li>one wording change for homeless</li>
+    <li>need at least one checked: Select at least one reason - or need to have a text in the "Other" textbox</li>
     <li>routing changed: now going to house type instead of medical question</li>    
+    <li>validation: <span class="govuk-error-message">Select at least one reason or give details</span></li>
 </ul>
 </div>
 
