--- a/app/views/forms/housing/CBLrecourse.html
+++ b/app/views/forms/housing/CBLrecourse.html
@@ -61,9 +61,9 @@
   </ul>
 </div>
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes:</h3>
+  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
   <p>Routing: Yes takes you out, No and I don't know is taking you through.</p>
-  <p>validation: Confirm if no recourse to public funds</p>
+  <p>validation: <span class="govuk-error-message">Confirm if no recourse to public funds</span></p>
   <p>they only see this question if they say yes to the previous one (immigration) and in the guidance "someone" is now "some people"</p>
 </div>
 {% endblock %}
