--- a/app/views/forms/housing/CBLstart-warning.html
+++ b/app/views/forms/housing/CBLstart-warning.html
@@ -13,7 +13,7 @@
       <a class="govuk-back-link" href="javascript: history.go(-1)" style="border-bottom-color: white; padding: 5px 10px; background-color: #ffbf47 ">Back</a>
       
       <h2 class="govuk-heading-m">
-          Use the back link if you need to go to the previous page
+          Use the back link above if you need to go back to the previous page
       </h2>
     
       {% from "warning-text/macro.njk" import govukWarningText %}
