--- a/app/views/forms/housing/CBLstart.html
+++ b/app/views/forms/housing/CBLstart.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing <span class="UR-tag amber">amber</span>
+        Apply online for council housing
       </h1>
       <p><img src="{{ asset_path }}images/housing-logo.PNG" alt="Housing logo" style="height:95px; width:250px"></p>
 
@@ -63,22 +63,10 @@
 <div class="design-notes-box">
   <h3 class="govuk-heading-s">Design notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
-    <li>original form: <a href="https://www.eastrenfrewshire.gov.uk/CHttpHandler.ashx?id=13165&p=0" target="_blank">https://www.eastrenfrewshire.gov.uk/CHttpHandler.ashx?id=13165&p=0</a></li>
+    <li>original paper form: <a href="https://www.eastrenfrewshire.gov.uk/CHttpHandler.ashx?id=13165&p=0" target="_blank">https://www.eastrenfrewshire.gov.uk/CHttpHandler.ashx?id=13165&p=0</a></li>
   </ul>
 </div>
-<div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes: (changes on the 5/12) </h3>
-    <ul class="govuk-list govuk-list--bullet">
-      <li><strong>heading changed on all pages</strong></li>
-      <li><a href="/forms/housing/CBLinfo-housed.html">who will be living with you</a></li>
-      <li><a href="/forms/housing/CBLbabies.html">pregnancy page</a></li>
-      <li><a href="/forms/housing/CBLadd-children.html">children staying occasionally</a></li>
-      <li><a href="/forms/housing/CBLjoint.html">joint applicant</a></li>
-      <li>if there is a joint applicant, we need 5 years of addresses too .....</li>
-      <li>we remove the monitor information page and add a link on the last page instead</li>
-      <li>medical and abuse: content change: to you or anyone who will be living with you</li>
-    </ul>
-  </div>
+
 
 
 {% endblock %}
