--- a/app/views/forms/housing/CBLwho-moving.html
+++ b/app/views/forms/housing/CBLwho-moving.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          Apply online for council housing<span class="UR-tag red">NEW</span>
+          Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <form class="form" method="post">
@@ -75,10 +75,10 @@
     </div>
 </div>
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes:</h3>
+  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
   <ul class="govuk-list govuk-list--bullet">
   <li>if yes, then we need information in textboxes display</li>
-  <li>validation: will be provided by Sharon once the content is reviewed </li>
+  <li>validation: <span class="govuk-error-message"> Confirm if people not moving / Give details of actual situation / Give details of anyone not moving</span></li>
   </ul>
 </div>
 
