--- a/app/views/forms/housing/CBL16.html
+++ b/app/views/forms/housing/CBL16.html
@@ -8,7 +8,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          Apply online for council housing<span class="UR-tag ok">ok</span>
+          Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <form class="form" method="post">
@@ -45,7 +45,7 @@
     </div>
 </div>
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes:</h3>
+  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>validation: <span class="govuk-error-message">Confirm 16 or over</span></li>
     </ul>
