--- a/app/views/forms/housing/CBL5yearsadd.html
+++ b/app/views/forms/housing/CBL5yearsadd.html
@@ -8,10 +8,10 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag red">CHANGED</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
-        <p class="govuk-body-l">Enter previous addresses you lived at for the last 5 years.</p>
+        <p class="govuk-body-l">Tell us the addresses you’ve lived at for the past 5 years. </p>
         <h2 class="govuk-heading-m">
             Address 1:
         </h2>
@@ -48,7 +48,7 @@
           name: "type1",
           fieldset: {
             legend: {
-              text: "Were you a:",
+              text: "Which were you?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
@@ -154,9 +154,9 @@
               checked: checked("leave1", "Asked or told to leave")
             },
             {
-              value: "Relation breakdown",
-              text: "Relation breakdown",
-              checked: checked("leave1", "Relation breakdown")
+              value: "Relationship breakdown",
+              text: "Relationship breakdown",
+              checked: checked("leave1", "Relationship breakdown")
             },
             {
               value: "End of lease",
@@ -191,16 +191,16 @@
 
 
 <div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
+    <h3 class="govuk-heading-s">Design notes:<span class="UR-tag amber">should be ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>need 5 addresses and <a href="/forms/housing/CBLaddress2">textbox on the last one if the applicant need to add more addresses</a> I only coded 2</li>
     </ul>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>For the first previous address, date needs to be provided but can be estimated - so just need not to be empty</li>
     <li>need to enter an address (textbox not empty) + need to pick a type + need at least one reason for leaving (if Other then need a description)</li>
+    <li>Validation: <span class="govuk-error-message">Enter address / Confirm occupant type / Enter date moved in / Enter date moved out / Select reason for leaving</span></li>
     </ul>
 </div>
 
