--- a/app/views/forms/housing/CBLadd-child1-loop.html
+++ b/app/views/forms/housing/CBLadd-child1-loop.html
@@ -151,14 +151,14 @@
 <p><a href="/forms/housing/CBLadd-children.html">Try an alternative</a></p>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>Validation - name, relation are not empty: Enter first name - Enter last name  - Enter relationship</li>
-      <li>dob, 3 fields not empty: Enter date of Birth - and if possible is a valid date (not the 31 of April) - Enter valid date</li>
-      <li>need to pick one Gender, but description if Other is optional - Enter gender</li>
-      <li>address - Enter their address, including postcode</li>
-      <li>same for all other screen for child 2 etc....</li>
-      <li><strong>we need to be able to enter 5 children</strong> potentially. On the 5th at the bottom, we need an open textbox with label: <a href="/forms/housing/CBLchild2">Tell us about anyone else you didn't add yet (if applicable)</a> (placeholder for now, content by Sharon later)</li>
+      <li>Validation - name, relation are not empty: <span class="govuk-error-message">Enter first name - Enter last name  - Enter relationship</span></li>
+      <li>dob, 3 fields not empty: <span class="govuk-error-message">Enter date of Birth</span> - and if possible is a valid date (not the 31 of April) - <span class="govuk-error-message">Enter valid date</span></li>
+      <li>need to pick one Gender, but description if Other is optional - <span class="govuk-error-message">Enter gender</span></li>
+      <li>address - <span class="govuk-error-message">Enter address</span></li>
+      <li>same for all other screens for child 2 etc....</li>
+      <li><strong>we need to be able to enter 5 children</strong> potentially. On the 5th at the bottom, we need an open textbox with label: <a href="/forms/housing/CBLchild2">Tell us about anyone else you didn't add yet (if applicable)</a></li>
     </ul>
 </div>
 
