--- a/app/views/forms/housing/CBLadd-person1-loop.html
+++ b/app/views/forms/housing/CBLadd-person1-loop.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing<span class="UR-tag ok">ok</span>
+        Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <p class="govuk-body-l">Enter each person who will be living with you.</p>
@@ -167,14 +167,14 @@
 <p><a href="/forms/housing/CBLadd-person.html">Try an alternative</a></p>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>Validation - name, relation are not empty: Enter first name - Enter last name  - Enter relationship</li>
-      <li>dob, 3 fields not empty: Enter date of Birth - and if possible is a valid date (not the 31 of April) - Enter valid date</li>
-      <li>need to pick one Gender, but description if Other is optional - Enter gender</li>
-      <li>pick yes or no living with you - Confirm live with you now</li>
+      <li>Validation - name, relation are not empty: <span class="govuk-error-message">Enter first name - Enter last name  - Enter relationship</span></li>
+      <li>dob, 3 fields not empty: <span class="govuk-error-message">Enter date of Birth</span> - and if possible is a valid date (not the 31 of April) - <span class="govuk-error-message">Enter valid date</span></li>
+      <li>need to pick one Gender, but description if Other is optional - <span class="govuk-error-message">Enter gender</span></li>
+      <li>pick yes or no living with you - <span class="govuk-error-message">Confirm if live with you now</span></li>
       <li>same for all other screen for person 2 etc....</li>
-      <li><strong>we need to be able to enter 10 people</strong> potentially. On the 10th at the bottom, we need an open textbox with label: <a href="/forms/housing/CBLperson3">Tell us about anyone else you didn't add yet (if applicable)</a> (placeholder for now, content by Sharon later)</li>
+      <li><strong>we need to be able to enter 10 people</strong> potentially. On the 10th at the bottom, we need an open textbox with label: Tell us about anyone else you didn't add yet (if applicable) <a href="/forms/housing/CBLperson3">to see an example</a></li>
     </ul>
 </div>
 
