--- a/app/views/forms/housing/CBLaddress.html
+++ b/app/views/forms/housing/CBLaddress.html
@@ -10,11 +10,11 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          Apply online for council housing<span class="UR-tag red">CHANGED</span>
+          Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <h2 class="govuk-heading-m">
-          What is your current address?
+          Current address
       </h2>
       <form class="form" method="post">
 
@@ -42,8 +42,8 @@
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
-  <li>text for address, mentions postcode now - no validation apart from the top textbox not empty</li>
-  <li>validation: Enter address </li>
+  <li>text for address, mentions postcode now</li>
+  <li>validation: <span class="govuk-error-message">Enter address</span> </li>
   </ul>
 </div>
 
