--- a/app/views/forms/housing/CBLaddress1.html
+++ b/app/views/forms/housing/CBLaddress1.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing<span class="UR-tag red">CHANGED</span>
+        Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <h2 class="govuk-heading-m">
@@ -82,9 +82,11 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>saying 'past address' now instead of just 'address'</li>
+    <li>Validation: <span class="govuk-error-message">Confirm if need to add past address </span></li>
+    
     </ul>
 </div>
 
