--- a/app/views/forms/housing/CBLdeclaration1.html
+++ b/app/views/forms/housing/CBLdeclaration1.html
@@ -46,11 +46,12 @@
 </div>
 
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
     <li>flow changed: monitor info is removed</li>
     <li>word changed: of East Renfrewshire, instead of 'or'</li>
     <li>this is now just a yes no question, if yes, goes to another screen where we will collect more details, and no goes to abuse question</li>
+    <li>validation: <span class="govuk-error-message">Confirm if employee or councillor or related to</span></li>
     </ul>
 </div>
 
