--- a/app/views/forms/housing/CBLdob.html
+++ b/app/views/forms/housing/CBLdob.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing<span class="UR-tag ok">ok</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <form class="form" method="post">
@@ -59,9 +59,9 @@
 </div>
 
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>validation: 3 fields are not empty and with numbers</li>
+      <li>validation: 3 fields are not empty and with numbers - <span class="govuk-error-message">Enter valid date of birth</span></li>
       <li>ideally also check it's a real date (no 31 April) but Housing will check anyway so not essential</li>
     </ul>
 </div>
