--- a/app/views/forms/housing/CBLgender.html
+++ b/app/views/forms/housing/CBLgender.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing<span class="UR-tag ok">ok</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <form class="form" method="post">
@@ -72,10 +72,10 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>Text to describe gender is not mandatory - in summary on further screens we will display the description if provided, or just display "Other" if not</li>
-      <li>Validation: none on the description - if no selection: Enter gender (?)</li>
+      <li>Validation: none on the description - if no selection: <span class="govuk-error-message">Enter gender</span></li>
     </ul>
 </div>
 
