--- a/app/views/forms/housing/CBLhomeless.html
+++ b/app/views/forms/housing/CBLhomeless.html
@@ -10,20 +10,29 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          Apply online for council housing<span class="UR-tag red">NEW</span>
+          Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 
       <h2 class="govuk-heading-m">
-          If you are homeless or could soon become homeless
+        Homeless or at risk of being made homeless
       </h2>
-        <p>Contact our Homeless Team without delay for advice. They will look at your situation and tell you what your housing options are.</p>
+        <p>You need to contact our Homelessness Team. </p>
+        <p>We’ll discuss your situation to tell you what your options are. </p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>Monday to Friday from 8.45am to 4.45pm (excluding public holidays) <strong>0141 577 3001</strong></li>
+          <li>Phone:<strong>0141 577 3001</strong></li>
           <li>Outwith office hours: <strong>0800 052 0180</strong></li>
         </ul>
  
     </div>
 </div>
-
+<div class="design-notes-box">
+  <h3 class="govuk-heading-s">Design notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>Housing to confirm if the first phone number is correct or if there is a direct line</li>
+    </ul>
+</div>
+<div class="IT-notes-box">
+  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+</div>
 {% endblock %}
