--- a/app/views/forms/housing/CBLhouse-type.html
+++ b/app/views/forms/housing/CBLhouse-type.html
@@ -9,7 +9,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing <span class="UR-tag amber">CHANGED</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 
@@ -112,7 +112,7 @@
 
 
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes: <span class="UR-tag red">not needed to provide the service - might be removed or changed</span></h3>
     <p>text of checkbox  Sheltered housing changed + extra radio button for highest floor</p>
     <p>second question as a different wording and is not checkboxes instead of radio buttons</p>
 </div>
