--- a/app/views/forms/housing/CBLimmigration.html
+++ b/app/views/forms/housing/CBLimmigration.html
@@ -66,9 +66,10 @@
     </div>
 </div>
 <div class="IT-notes-box">
-  <h3 class="govuk-heading-s">IT notes:</h3>
+  <h3 class="govuk-heading-s">IT notes: <span class="UR-tag ok">ok to code</span></h3>
   <p>wording is different - now asking WILL live with you</p>
   <p>validation: <span class="govuk-error-message">Confirm you or anyone who will live with you under immigration control</span></p>
+  <p>+ if yes and empty<span class="govuk-error-message">Give details about immigration control</span></p>
   <p>Edit: 06/12, if they say no they don't see the next question about recourse to public funds</p>
 </div>
 {% endblock %}
