--- a/app/views/forms/housing/CBLinfo-housed.html
+++ b/app/views/forms/housing/CBLinfo-housed.html
@@ -10,11 +10,11 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Apply online for council housing<span class="UR-tag ok">ok</span>
+            Apply online for council housing
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
         <h2 class="govuk-heading-m">
-            We need to know who will be living with you
+            We need to know who'll be living with you
           </h2>
           <p class="govuk-!-margin-bottom-6">In the next questions, only add children who live with you all the time. You can add children later who live with you sometimes. </p>
          
@@ -51,23 +51,11 @@
           </form>
     </div>
 </div>
-<div class="content-notes-box">
-  <h3 class="govuk-heading-s">Content notes:</h3>
-  <ul class="govuk-list govuk-list--bullet">
-    <li>content about other children on this page should match the relevant screen later</li>
-  </ul>
-</div>
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-    <ul class="govuk-list govuk-list--bullet">
-      <li>we expect the user to add everyone who will be living with them but the kids from a previous relation who regularly stay overnight (this is due to the process they follow)</li>
-    </ul>
-</div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>if they say they live alone, they jump to the pregnancy question - if no, then they will go to the first screen to add person</li>
-      <li>Validation - error message : to be provided when content is drafted</li>
+      <li>Validation - <span class="govuk-error-message">Confirm if will live alone</span></li>
     </ul>
 </div>
 
