--- a/app/views/forms/housing/CBLjoint-info.html
+++ b/app/views/forms/housing/CBLjoint-info.html
@@ -16,7 +16,7 @@
       <h2 class="govuk-heading-m">
          You told us you have a joint applicant
         </h2>
-        <p class="govuk-!-margin-bottom-6">We need the addresses they lived at for the last 5 years too.</p>
+        <p class="govuk-!-margin-bottom-6">We need the addresses they lived at for the past 5 years too.</p>
        
         <form class="form" method="post">
 {% from "radios/macro.njk" import govukRadios %}
@@ -51,13 +51,9 @@
 
     </div>
 </div>
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-   <p>Need to be seen by Sharon and Housing - place holder content for now</p>
-</div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
    <p>new page </p>
-   <p>validation will be needed but will need the wording to be agreed before I can provide an error message</p>
+   <p>validation <span class="govuk-error-message">Confirm if joint applicant at same addresses</span></p>
 </div>
 {% endblock %}
