--- a/app/views/forms/housing/CBLjoint.html
+++ b/app/views/forms/housing/CBLjoint.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing<span class="UR-tag amber">CHANGED</span>
+        Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <form class="form" method="post">
@@ -24,7 +24,7 @@
   value: data['joint-applicant'],
   classes: "govuk-!-width-two-thirds",
   label: {
-    text: "Enter their name"
+    text: "Enter name"
   }
 }) }}
 {% endset -%}
@@ -71,8 +71,8 @@
    <p>In some very rare cases, there can be more than one joint applicant on the lease. Most of the time, it's added after the start of the lease. We would catch this as there would be more than one name in the box. We would not ask for extra 5 years of addresses for a 3rd applicant</p>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:</h3>
-   <p>new page - <strong>content has changed</strong></p>
-   <p>validation will be needed: Confirm if anyone is a joint applicant (if yes, textbox can't be empty - Enter name ) </p>
+    <h3 class="govuk-heading-s">IT notes: <span class="UR-tag ok">ok to code</span></h3>
+   <p><strong>content has changed</strong></p>
+   <p>validation will be needed: <span class="govuk-error-message">Confirm if joint applicant</span> if yes, textbox can't be empty - <span class="govuk-error-message">Enter name</span>  </p>
 </div>
 {% endblock %}
