--- a/app/views/forms/housing/CBLlegal.html
+++ b/app/views/forms/housing/CBLlegal.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing<span class="UR-tag ok">ok</span>
+        Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <h2 class="govuk-heading-m">
@@ -128,5 +128,12 @@
     </div>
 </div>
 
-
+<div class="IT-notes-box">
+  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>validation: <span class="govuk-error-message">Confirm if legal action taken for breaking tenancy agreement / Provide details of legal action</span></li>
+      <li>validation: <span class="govuk-error-message">Confirm if ASBO given  / Provide details of ASBO</span></li>
+      <li>validation: <span class="govuk-error-message">Confirm if on Sex Offenders register</span></li>
+    </ul>
+</div>
 {% endblock %}
