--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -17,11 +17,11 @@
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="education/P1-start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>18/12 morning</strong><br>
-        Form LIVE since 17/12/18</li><br>
-        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">CBL</a><br>version following user testing on Monday 10/12 - annotated with tags<br><strong class="govuk-tag info">last update:</strong><strong> 19/12 evening</strong><br>
+        <li><a href="housing/CBLstart.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">CBL</a><br>version with updated content<br><strong class="govuk-tag info">last update:</strong><strong> 20/12 evening</strong><br>
           See the flow of screens used in UR session of Monday 10/12 <a href="{{ asset_path }}/images/CBLflowur1012.pdf" target="_blank">as a PDF</a></li><br>
         <li><a href="equal-opportunities/start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Equality and diversity</a><br>Based on Housing document - but some changes in already<br> <strong class="govuk-tag info">last update:</strong>  <strong>20/12 evening</strong></li><br>
+        <li><a href="education/P1-start1.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">P1 enrolment</a><br>version with modification and feedback following UR testing on the 28/11<br> <strong class="govuk-tag info">last update:</strong>  <strong>18/12 morning</strong>
+          <span class="UR-tag red">LIVE form</span> since 17/12/18</li><br>
         <li><a href="housing/members-household/start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Members of household - for Housing</a><br>First draft - for illustration only - should be one question per page<br> <strong class="govuk-tag info">last update:</strong>  <strong>2/12 evening</strong></li><br>
         <li><a href="housing/medical/start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Medical priority - for Housing</a><br>First draft - for illustration only<br> <strong class="govuk-tag info">last update:</strong>  <strong>9/12 afternoon</strong></li><br>
         <li><a href="housing/amendment/start.html" class="govuk-body govuk-!-font-size-24 govuk-!-font-weight-bold">Amendment - for Housing</a><br>First draft - for illustration only - under construction - only change of name, and remove person coded for now<br> <strong class="govuk-tag info">last update:</strong>  <strong>16/12 morning</strong></li><br>
